--- a/glushkovizer/doc/formal.tex
+++ b/glushkovizer/doc/formal.tex
@@ -51,7 +51,7 @@
     nous nous concentrerons sur les expressions régulières et les fonctions
     définies sur celles-ci. Puis, dans un second temps, nous nous intéresserons
     aux automates et à leurs diverses fonctions définies sur eux. Enfin, pour
-    finir, nous parlerons d’automates particuliers, ceux de Glushkov, nous
+    finir, nous parlerons d'automates particuliers, ceux de Glushkov, nous
     aborderons leurs constructions ainsi que leurs propriétés.
 \end{abstract}
 
