--- a/glushkovizer/doc/glushkov.tex
+++ b/glushkovizer/doc/glushkov.tex
@@ -134,12 +134,12 @@ document~\cite{DBLP:journals/tcs/CaronZ00}).
 
 \subsection{Conclusion}
 
-L’algorithme de Glushkov est très puissant, puisqu’il permet de convertir une
-expression régulière en automate, ce qui fait qu’on gagne les avantages des
+L'algorithme de Glushkov est très puissant, puisqu'il permet de convertir une
+expression régulière en automate, ce qui fait qu'on gagne les avantages des
 deux structures. Avec les expressions régulières, on peut simplement décrire un
 langage et avec les automates, on peut simplement savoir si un mot est reconnu.
 Il est très utilisé en \textit{informatique}, parce que pour les humains, il
 est plus simple de décrire un langage avec une expression régulière. Et les
-machines comprennent très facilement les automates. Ce qui fait qu’il est
+machines comprennent très facilement les automates. Ce qui fait qu'il est
 possible de faire des \textit{programmes informatiques} qui reconnaissent un
 langage et exécutent des tâches à chaque mot.
