--- a/glushkovizer/doc/references.bib
+++ b/glushkovizer/doc/references.bib
@@ -52,3 +52,29 @@
   pages   = {75--90},
   year    = {2000}
 }
+
+@article{thompson1968programming,
+  title     = {Programming techniques: Regular expression search algorithm},
+  author    = {Thompson, Ken},
+  journal   = {Communications of the ACM},
+  volume    = {11},
+  number    = {6},
+  pages     = {419--422},
+  year      = {1968},
+  publisher = {ACM New York, NY, USA}
+}
+
+@article{V_M_Glushkov_1961,
+  doi       = {10.1070/RM1961v016n05ABEH004112},
+  url       = {https://dx.doi.org/10.1070/RM1961v016n05ABEH004112},
+  year      = {1961},
+  month     = {10},
+  publisher = {},
+  volume    = {16},
+  number    = {5},
+  pages     = {1},
+  author    = {V M Glushkov},
+  title     = {THE ABSTRACT THEORY OF AUTOMATA},
+  journal   = {Russian Mathematical Surveys},
+  abstract  = {CONTENTS Introduction  § 1. Homomorphism and equivalence of automata  § 2. Introduction of mappings in automata  § 3. Introduction of events in finite automata, operations on events  § 4. Automata and semi-groups  § 5. The composition of automata  § 6. Experiments with automata Conclusion References}
+}
